--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "start-json-server": "json-server src/app/api/db.json --watch --port 8000"
   },
   "dependencies": {
     "@types/node": "20.4.9",
@@ -15,6 +16,7 @@
     "@types/react-dom": "18.2.7",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
+    "json-server": "^0.17.3",
     "next": "13.4.13",
     "prettier": "^1.19.1",
     "react": "18.2.0",
