--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "eslint-config-next": "13.4.13",
     "json-server": "^0.17.3",
     "next": "13.4.13",
-    "prettier": "^1.19.1",
     "react": "18.2.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "sass": "^1.65.1",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "prettier": "^3.0.3"
   }
 }
