--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "start-json-server": "json-server db.json --watch --port 8000"
+    "lint": "next lint"
   },
   "dependencies": {
     "@types/node": "20.4.9",
     "@types/react": "18.2.20",
     "@types/react-datepicker": "^4.15.0",
     "@types/react-dom": "18.2.7",
+    "bullmq": "^4.10.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "json-server": "^0.17.3",
