--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.3.1",
     "@types/node": "20.4.9",
     "@types/react": "18.2.20",
     "@types/react-datepicker": "^4.15.0",
     "@types/react-dom": "18.2.7",
+    "@vercel/postgres": "^0.5.0",
     "bullmq": "^4.10.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
@@ -26,6 +28,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "prisma": "^5.3.1"
   }
 }
